k8s/nodeapp-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-cluster-ip-service
  namespace: my-namespace
  labels:
    app: nodeapp-cluster-ip-service
    created_by: KenSingson
    environment: test
spec:
  type: ClusterIP
  selector:
    app: nodeapp-deployment
    created_by: KenSingson
    environment: test
  ports:
    - port: 3000
      targetPort: 3000
